--- a/.gitignore
+++ b/.gitignore
@@ -37,6 +37,13 @@ Desktop.ini             # Windows folder settings
 # *.md
 # !README.md
 
+# Node.js #
+###########
+node_modules/           # npm dependencies
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
 # Other common ignores #
 #######################
 /coverage                # Coverage reports
