Fix Python lint job - install dependencies with uv sync
- Add 'uv sync --all-extras' step before running linters
- This ensures black, ruff, and mypy are available in the environment

--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -48,6 +48,9 @@ jobs:
       - name: Setup uv
         uses: astral-sh/setup-uv@v7
 
+      - name: Install Python dependencies
+        run: uv sync --all-extras
+
       - name: Check black formatting
         run: uv run black --check python/
 
