Add DAQ integration tests and comprehensive documentation
Integration Tests (tests/integration/test-daq.ts):
- 12 comprehensive test cases covering all DAQ operations
- Tests: status checks, initialize/cleanup, rotation, stepping, homing
- Position tracking validation and wrapping (0-360°)
- Full rotation test (360° wraps to 0°)
- Counter-clockwise rotation test
- Mock DAQ event verification
- Follows same pattern as camera integration tests

Documentation (docs/DAQ_TESTING.md):
- Quick test guide with npm run test:daq
- Manual command-line testing examples
- Browser console test scripts
- Complete DAQ settings reference table
- Mock vs Real DAQ comparison
- All DAQ operations documented with examples
- Event listeners guide
- Position tracking explanation
- Troubleshooting section
- Camera + DAQ integration example

Package.json:
- Added test:daq script
- Runs integration test with Python rebuild

Run tests with: npm run test:daq

Related to #16

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "test:unit:watch": "vitest watch",
     "test:ipc": "npm run build:python && ts-node tests/integration/test-ipc.ts",
     "test:camera": "npm run build:python && ts-node tests/integration/test-camera.ts",
+    "test:daq": "npm run build:python && ts-node tests/integration/test-daq.ts",
     "test:package": "ts-node tests/integration/test-package.ts",
     "lint": "eslint --ext .ts,.tsx .",
     "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json,css,md}\"",
