fix: Add platform-specific fixes for Ubuntu and Windows E2E tests
Implement fixes from openspec/changes/fix-e2e-ci-ubuntu-windows:

1. **Windows Fix**: Replace Bash cleanup script with Node.js
   - Created scripts/stop-electron-forge.js (cross-platform)
   - Works on Linux, macOS, and Windows PowerShell
   - Fixes PowerShell error: "Missing '(' after 'if'"

2. **Ubuntu Fix**: Increase dev server startup wait
   - Linux CI: 30 seconds (was 15s)
   - macOS/Windows: Keep 15 seconds
   - Addresses slower Ubuntu GitHub runner compilation

3. **Documentation**: Add Issue 6 to E2E design.md
   - Documents platform-specific requirements
   - Links to fix-e2e-ci-ubuntu-windows OpenSpec change
   - Explains --no-sandbox flag (already in test code)
   - Explains cross-platform cleanup approach

Changes:
- .github/workflows/pr-checks.yml: Platform-specific wait times + Node cleanup
- scripts/stop-electron-forge.js: New cross-platform cleanup script
- openspec/changes/add-e2e-testing-framework/design.md: Issue 6 docs

Expected CI Results:
- ✅ macOS E2E: 3/3 tests passing (no regression)
- ✅ Ubuntu E2E: 3/3 tests passing (fix blank renderer + timing)
- ✅ Windows E2E: 3/3 tests passing (fix PowerShell error)

--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -269,7 +269,12 @@ jobs:
         run: |
           npm run start &
           echo $! > electron-forge.pid
-          sleep 15  # Wait for dev server to start
+          # Platform-specific wait times: Linux needs more time for dev server startup
+          if [ "$RUNNER_OS" == "Linux" ]; then
+            sleep 30
+          else
+            sleep 15
+          fi
 
       - name: Run Playwright E2E tests (Linux with Xvfb)
         if: runner.os == 'Linux'
@@ -285,10 +290,7 @@ jobs:
 
       - name: Stop Electron Forge dev server
         if: always()
-        run: |
-          if [ -f electron-forge.pid ]; then
-            kill $(cat electron-forge.pid) || true
-          fi
+        run: node scripts/stop-electron-forge.js
 
       - name: Upload Playwright test results
         uses: actions/upload-artifact@v4
