--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -159,6 +159,7 @@ jobs:
         with:
           enable-cache: true
           cache-dependency-glob: "pyproject.toml"
+          python-version: "3.12"
 
       - name: Install Python dependencies
         run: uv sync --all-extras
@@ -197,6 +198,7 @@ jobs:
         with:
           enable-cache: true
           cache-dependency-glob: "pyproject.toml"
+          python-version: "3.12"
 
       - name: Install dependencies
         run: npm ci
@@ -247,6 +249,7 @@ jobs:
         with:
           enable-cache: true
           cache-dependency-glob: "pyproject.toml"
+          python-version: "3.12"
 
       - name: Install dependencies
         run: npm ci
@@ -322,6 +325,7 @@ jobs:
         with:
           enable-cache: true
           cache-dependency-glob: "pyproject.toml"
+          python-version: "3.12"
 
       - name: Install dependencies
         run: npm ci
