fix: Use bash shell for dev server start step to fix Windows compatibility
Windows runners default to PowerShell which doesn't understand bash syntax
like 'if [ "$RUNNER_OS" == "Linux" ]; then'. By explicitly specifying
'shell: bash', we ensure the step runs in bash on all platforms including
Windows.

This fixes the PowerShell parser error:
  ParserError: Missing '(' after 'if' in if statement.

Fixes #60 (partially - this fixes Windows E2E, integration tests still broken)

--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -269,6 +269,7 @@ jobs:
         run: node scripts/build-webpack-dev.js
 
       - name: Start Electron Forge dev server in background
+        shell: bash
         run: |
           npm run start &
           echo $! > electron-forge.pid
