--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "test:unit:coverage": "vitest run --coverage",
     "test:unit:watch": "vitest watch",
     "test:ipc": "npm run build:python && ts-node tests/integration/test-ipc.ts",
-    "test:camera": "npm run build:python && ts-node tests/integration/test-streaming.ts",
     "test:streaming": "npm run build:python && ts-node tests/integration/test-streaming.ts",
+    "test:camera": "npm run test:streaming",
     "test:daq": "npm run build:python && ts-node tests/integration/test-daq.ts",
     "test:scanner": "npm run build:python && ts-node tests/integration/test-scanner.ts",
     "test:scanner-database": "npm run build:python && npm run prisma:generate && ts-node tests/integration/test-scanner-database.ts",
